# pytest-loguru

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
.config/: pre-commit-config.yaml  ruff.toml
.github/workflows/: publish.yaml  run-python-tests.yaml
src/pytest_loguru/: plugin.py
tests/pytest_loguru/: test_plugin.py
