[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pytest-loguru"
description = "Pytest Loguru"
authors = [{name = "Michael Rans"}]
license = "MIT"
keywords = ["loguru",  "py.test", "pytest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

requires-python = ">=3.8"

dependencies = ["loguru"]

dynamic = ["version"]

readme = "README.md"

[project.urls]
Homepage = "https://github.com/mcarans/pytest-loguru"

[project.entry-points.pytest11]
loguru = "pytest_loguru.plugin"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

#########
# Hatch #
#########

# Build

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_loguru"]

[tool.hatch.build.hooks.vcs]
version-file = "src/pytest_loguru/_version.py"

# Versioning

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
version_scheme = "python-simplified-semver"

# Tests

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.test.scripts]
test = """
       pytest -c .config/pytest.ini --rootdir=. --junitxml=test-results.xml \
       --cov --cov-config=.config/coveragerc --no-cov-on-fail \
       --cov-report=lcov --cov-report=term-missing
       """

[[tool.hatch.envs.test.matrix]]
python = ["3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["ruff"]

[tool.hatch.envs.lint.scripts]
style = [
  "ruff check --config .config/ruff.toml --diff {args:.}",
  "ruff format --config .config/ruff.toml --diff {args:.}",
]
