[metadata]
name = pytest-loguru
description = Pytest Loguru
version = attr: pytest_loguru.__version__
author = Mike Rans
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = py.test, pytest, loguru
url = https://github.com/mcarans/pytest-loguru
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Framework :: Pytest

[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    = src

python_requires = >=3.6

install_requires =
    pytest
    loguru

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    loguru = pytest_loguru.plugin

[bdist_wheel]
universal = 1

